--- a/src/app/side-nav/side-nav.component.scss
+++ b/src/app/side-nav/side-nav.component.scss
@@ -11,7 +11,6 @@
   }
   
   .example-sidenav {
-    padding:10px;
     width:300px;
     background-color: rgb(255, 255, 255);
  
